# hcls-research-agent

./: .env.copy  .gitignore  Makefile  README.md  coverage.xml  deploy.adk.yaml  junit.xml  pyproject.toml
src/agents/hcls_research_agent/sub_agents/hypothesis_agent/: __init__.py  prompt.py
src/agents/hcls_research_agent/sub_agents/research_question_agent/: prompt.py
src/agents/hcls_research_agent/sub_agents/search_agent/: agent.py  prompt.py
src/hcls_research_agent/: __init__.py  agent.py  prompt.py
src/hcls_research_agent/sub_agents/hypothesis_agent/: __init__.py  agent.py  prompt.py
src/hcls_research_agent/sub_agents/research_question_agent/: __init__.py  agent.py  prompt.py
src/hcls_research_agent/sub_agents/search_agent/: __init__.py  agent.py  prompt.py
tests/integration/: test_router.py
tests/unit/: test_hypothesis_agent.py  test_research_question_agent.py  test_router.py  test_search_agent.py
